simulatron-salt/src/lib/snapshots/simulatron_salt__tests__addressing_modes-2.snap
---
source: src/lib/tests.rs
expression: pretty_print_hex_block(&object_code.code)

---
0x00000000    53 49 4D 4F  42 4A 00 01  00 00 00 01  00 00 00 02  |SIMOBJ..........|
0x00000010    49 00 00 00  3D 03 66 6F  6F 00 00 00  01 00 00 00  |I...=.foo.......|
0x00000020    2E 11 00 00  00 12 06 00  00 00 40 00  06 18 00 00  |..........@.....|
0x00000030    00 00 06 01  00 00 50 00  04 00 00 00  04 42 29 AE  |......P......B).|
0x00000040    14                                                  |.|
