simulatron-salt/src/lib/snapshots/simulatron_salt__tests__blockset.snap
---
source: src/lib/tests.rs
expression: pretty_print_hex_block(&object_code.code)

---
0x00000000    53 49 4D 4F  42 4A 00 01  00 00 00 00  00 00 00 01  |SIMOBJ..........|
0x00000010    11 00 00 00  38 18 00 00  00 40 12 34  56 78 41 19  |....8....@.4VxA.|
0x00000020    00 00 00 40  12 34 56 78  10 1A 00 00  00 40 01 41  |...@.4Vx.....@.A|
0x00000030    1B 00 00 00  40 01 10 1C  07 12 34 56  78 41 1D 07  |....@.....4VxA..|
0x00000040    12 34 56 78  10 1E 07 01  41 1F 07 01  10           |.4Vx....A....|
