simulatron-salt/src/lib/snapshots/simulatron_salt__tests__branching-3.snap
---
source: src/lib/tests.rs
expression: failure

---
CodegenFailure {
    errors: [
        SaltError {
            span: 32..36,
            message: "Label without a following instruction.",
        },
    ],
    warnings: [],
}
